[gd_scene load_steps=2 format=3 uid="uid://c48m5fav6r03p"]

[ext_resource type="Script" path="res://Scripts/Home.gd" id="1_t1evy"]

[node name="Main" type="Node2D"]
script = ExtResource("1_t1evy")

[node name="PlayButton" type="Button" parent="."]
offset_left = 386.0
offset_top = 106.0
offset_right = 718.0
offset_bottom = 243.0
text = "Play"

[node name="QuitButton" type="Button" parent="."]
offset_left = 462.0
offset_top = 495.0
offset_right = 636.0
offset_bottom = 593.0
text = "Quit"

[node name="SettingsButton" type="Button" parent="."]
offset_left = 385.0
offset_top = 288.0
offset_right = 712.0
offset_bottom = 418.0
text = "Settings
"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
